fixing alignments

--- a/src/pages/AboutCampaign.module.css
+++ b/src/pages/AboutCampaign.module.css
@@ -45,6 +45,7 @@
   width: 40px;
   height: 40px;
 }
+
 .imgavatarImgIcon,
 .spanavatar {
   position: absolute;
@@ -55,6 +56,13 @@
   top: 0;
   left: 0;
   object-fit: cover;
+}
+.spanavatarIcon {
+  position: absolute;
+  top: 10px;
+  left: 8px;
+  width: 33px;
+  height: 33px;
 }
 .spanavatar {
   top: 10.5px;
@@ -117,7 +125,7 @@
 .divheaderAction {
   position: absolute;
   top: calc(50% - 26px);
-  right: 40.34px;
+  right: 90px;
   background-color: var(--color-gray-300);
   display: flex;
   flex-direction: row;
@@ -360,13 +368,18 @@
   padding: var(--padding-17xl) var(--padding-base) var(--padding-base);
   gap: var(--gap-xs);
 }
-.groupChild {
+.groupChildp {
   position: absolute;
+  height: 33.71%;
+  width: 29.7%;
   top: 0;
-  left: 71px;
+  right: 35.15%;
+  bottom: 66.29%;
+  left: 35.15%;
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
   object-fit: cover;
 }
 .logoutParent {
