--- a/src/pages/Analytics.module.css
+++ b/src/pages/Analytics.module.css
@@ -1,7 +1,7 @@
 .divheaderWrapperIcon {
   position: absolute;
   top: 0;
-  left: 30px;
+  left: 45px;
   width: 972.66px;
   height: 65px;
 }
