--- a/src/pages/Attribution.module.css
+++ b/src/pages/Attribution.module.css
@@ -107,7 +107,7 @@
 .divheaderAction {
   position: absolute;
   top: calc(50% - 26px);
-  right: 40.34px;
+  right: 90px;
   background-color: var(--color-gray-300);
   display: flex;
   flex-direction: row;
