--- a/src/pages/Setting.module.css
+++ b/src/pages/Setting.module.css
@@ -109,7 +109,7 @@
 .divheaderAction {
   position: absolute;
   top: calc(50% - 26px);
-  right: 80px;
+  right: 90px;
   background-color: var(--color-gray-300);
   display: flex;
   flex-direction: row;
